--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ body {
     z-index: 10;
   }
   
-  #exitBtn {
+  /* #exitBtn {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -45,7 +45,7 @@ body {
     cursor: pointer;
     z-index: 10;
     box-shadow: 0px 0px 6px rgba(0,0,0,0.3);
-  }
+  } */
   
   #exitBtn:hover {
     background-color: #c0392b;
